--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
 # Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
 *.so
 *.dylib
 
@@ -13,3 +10,5 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+*.code-workspace
